user search button in der navbar

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
                 <ul class="nav navbar-nav"></ul>
                 <form class="navbar-form navbar-left">
-                    <button type="button" id="UserSearchbtn" onclick="locationChange()">Search for User</button>
+                    <button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
                     <!--<div class="form-group">
                         <input type="text" class="form-control" placeholder="Search" onkeyup="locationChange()">
                     </div>
