--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -36,10 +36,11 @@
  -->           
           </ul>
           <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+              <button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
+              <!-- <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search">
+              </div>
+              <button type="submit" class="btn btn-default">Submit</button> -->
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
