--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -143,6 +143,12 @@
      xmlhttp.send( request);
 
  }
+
+
+            function clearinput(){
+                $('input:file').val('');
+            }
+            clearinput();
     }
 </script>
 
