--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -101,8 +101,8 @@
                 <div class="modal-header">
                     <h1> Das Shootout ist vorbei!</h1>
                 </div>
-                <div class="modal-body">
-                    <h2>Das waren Deine drei Lieblingsbilder:</h2>
+                <div id ="modalbody" class="modal-body">
+                    <h2>Schau Dir jetzt das Ranking des Shootouts an!</h2>
                 </div>
             </div>
         </div>
