--- a/frontend/static/html/photographerRanking.html
+++ b/frontend/static/html/photographerRanking.html
@@ -118,8 +118,7 @@
                         var userlist = JSON.parse(json);
                         userlist.reverse();
                         document.getElementById('bestphoto').src = userlist[0].picture;
-                        document.getElementById('bestphotowins').innerText = userlist[0].wins;
-                        //document.getElementById('1username').innerText = userlist[0].person.username;
+                        document.getElementById('bestphotowins').innerText = "Das Bild hat " + userlist[0].wins + " Siege!";
                         document.getElementById('1username').innerText = userlist[0].person;
                         //-----------------------------
                         document.getElementById('secondphoto').src = userlist[1].picture;
