--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -78,6 +78,71 @@
         </tr>
 
         <script>
+            window.onload = function profileLink (){
+
+                var shootoutlist;
+                var anzahlshootouts;
+                var userdata;
+                var anzahlusers;
+
+
+
+                //erster Request: Get username
+                var xmlhttplog = new XMLHttpRequest();
+
+                xmlhttplog.open("GET", 'http://localhost:8080/meetme/api/person/', true);
+                xmlhttplog.setRequestHeader("Content-Type", "application/json");
+                xmlhttplog.send(null);
+
+                xmlhttplog.onreadystatechange = function () {
+                    if (xmlhttplog.readyState == XMLHttpRequest.DONE) {
+                        var jsona = xmlhttplog.responseText;
+                        userdata = JSON.parse(jsona);
+                        anzahlusers=(Object.keys(userdata).length);
+                        getshootouts();
+                    }
+                };
+
+    function getshootouts() {
+
+                //zweiter Request: Get shootoutname and userID
+                var xhr = new XMLHttpRequest();
+                //var json;
+                xhr.open('GET', 'http://localhost:8080/meetme/api/shootout', true);
+                xhr.setRequestHeader("Content-Type", "application/json");
+                xhr.send(null);
+
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState == XMLHttpRequest.DONE) {
+                        var json = xhr.responseText;
+                        shootoutlist = JSON.parse(json);
+                        anzahlshootouts=(Object.keys(shootoutlist).length);
+                       // alert(shootoutlist[0].person.id);
+                       // alert( userdata[0].id);
+
+
+                        for (var i = 0; i < anzahlshootouts; i++) { //i is set to 3 because of db issue!!!
+
+
+                            for (var j=0; j < anzahlusers; j++){
+                                if(shootoutlist[i].person.id == userdata[j].id){
+
+                                    result.innerHTML += "<tr> " +
+                                        "<td id='td1" + i + "'/>" + shootoutlist[i].name+ "</td> " +
+                                        "<td id='td2 " + i + "'><a href=\"otherusersprofile.html\?uid="+shootoutlist[i].person.id+"\" >"+ userdata[j].username + "</a></td>" +
+                                        "<td id='td3 " + i + "'><a href=\"ShootoutRanking.html\?sid="+shootoutlist[i].id+"\" >Picture ranking</a></td>" +
+                                        "</tr>";
+                                }
+                            }
+                        }
+                    }
+                };
+
+            }
+            }
+        </script>
+
+        <!--<script>
                 window.onload = function () {
 
                     var xhr = new XMLHttpRequest();
@@ -86,7 +151,7 @@
 
                     xhr.open('GET', 'http://localhost:8080/meetme/api/shootout', true);
                     xhr.send(null);
-console.log('shootout gesendet');
+                    console.log('shootout gesendet');
                     xhr.onreadystatechange = function () {
                         if (xhr.readyState == XMLHttpRequest.DONE) {
                             console.log('response erhalten');
@@ -108,7 +173,7 @@ console.log('shootout gesendet');
 
                     };
 
-            </script>
+            </script>-->
     </table>
 
     <script>
