added AGB.html to all pages

--- a/frontend/static/html/AGB.html
+++ b/frontend/static/html/AGB.html
@@ -19,6 +19,9 @@
         h3 { margin-left: 20px; }
         ul { margin-top: 10px; }
         p {margin-top: 10px;}
+        body {
+            padding-bottom: 50px;
+        }
     </style>
 
 </head>
@@ -61,7 +64,7 @@
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
                             <li><a href="allphotos.html">All Pictures</a></li>
-                            <li><a href="FAQ.html">Help</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="AGB.html">AGB's</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Sign out</a></li>
@@ -312,7 +315,7 @@
     No agency, partnership, joint venture, fiduciary or other special relationship or employment is created as a result of this Agreement
     and you may not make any representations on behalf of or bind klicks in any manner.
 </div>
-<p></p>
+
 
 </body>
 </html>
