--- a/frontend/static/html/FAQ.html
+++ b/frontend/static/html/FAQ.html
@@ -88,7 +88,7 @@
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
                             <li><a href="allphotos.html">All Pictures</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="AGB.html">AGB's</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Sign out</a></li>
@@ -121,7 +121,7 @@
     </p>
 </div>
 
-<button class="accordion"></button>
+<button class="accordion">How can I </button>
 <div class="panel">
     <p>
     </p>
