--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -53,7 +53,7 @@
                         <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="allusers.html">All Users</a></li>
                             <li><a href="allphotos.html">All Pictures</a></li>
-                            <li><a href="#">Help</a></li>
+                            <li><a href="FAQ.html">FAQ</a></li>
                             <li><a href="AGB.html">AGB's</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">Sign out</a></li>
