--- a/frontend/static/html/dataAnalyticsDashboard.html
+++ b/frontend/static/html/dataAnalyticsDashboard.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!--<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Data Analytics</title>
     <link rel="icon" href="./images/Herzbeben_Logo.png">
-    <link rel="stylesheet" href="compare_profile.css">-->
+    <link rel="stylesheet" href="compare_profile.css">
 
     <!-- for top navbar -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <!--<link rel="stylesheet" href="dataAnalyticsDashboard.css" type="text/css">
+    <link rel="stylesheet" href="dataAnalyticsDashboard.css" type="text/css">
     <script type=text/javascript src = "navbarFunction.js"></script>
-    <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />-->
+    <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
 </head>
 
 <body>
-<!--<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
+<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
     <nav role="navigation">
         <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -27,24 +27,35 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="30px" height="30px"> </a>
+                <a class="navbar-brand" href="#"> <img class="brandImage" src="./images/icon.png" alt="Home" width="40px" height="40px"> </a>
+                <div class="heading">DATA ANALYTICS</div>
+                <button class="helpBtn10">Help
+                    <span class="helpText">This is your data analytics dashboard. It is divided into 2 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
+            </span>
+                </button>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling
+            <!--search bar
+            div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+            </div>
+               <button type="submit" class="btn btn-default">Submit</button-->
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <!--            <li><a href="#">Help</a></li>
                                 <li class="active"><a href="#">Compare pictures <span class="sr-only">(current)</span></a></li>
-
+                     -->
                 </ul>
                 <form class="navbar-form navbar-left">
-                    <button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
-                    <!-- <div class="form-group">
+                    <!--button type="button" class="btn btn-default" id="UserSearchbtn" onclick="locationChange()">Search for Users</button>
+                     <!--div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-default">Submit</button> -->
                 </form>
-                <ul class="nav navbar-nav navbar-right">
+                <!--ul class="nav navbar-nav navbar-right">
                     <li><a href="shootoutÜbersicht.html">Shootout Rankings</a></li>
                     <li><a href="compare.html">Compare Pictures</a></li>
                     <li class="active"><a href="profile.html">Profile</a></li>
@@ -59,30 +70,30 @@
                             <li><a href="#">Sign out</a></li>
                         </ul>
                     </li>
-                </ul>
+                </ul>-->
             </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid
+        </div><!-- /.container-fluid -->
     </nav>
-</header> -->
-<!-- Seitenüberschrift-->
+</header>
+<!-- Seitenüberschrift
 <header id="heading">
     <h1 style=margin-top:0px;>DATA ANALYTICS</h1>
-</header>
+</header>-->
 
-<!--Help button-->
-<button class="helpBtn1">Help
-    <span class="helpText">This is your data analytics dashboard. It is divided into 2 sections: <br> 1. Geolocation: Track the location of your users <br> 2. User's Preferences: Take a look into the shootout preferecnes. <br> 3. Standard Variance: Examine the deviation of an individual assessment from the average assessment.
-            </span>
-</button>
 
-<!-- JavaScript for top navbar
+
+
+<!-- JavaScript for top navbar-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-</script> -->
+</script>
 
 <div class="flex-container">
     <div>Geolocation</div>
     <div>User's Preferences</div>
     <div>Standard Variance</div>
+    <div>DataSet4</div>
+    <div>DataSet5</div>
+    <div>DataSet6</div>
 </div>
 <script>
     window.onload = function () {
