max picture size FE

--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -71,7 +71,8 @@
 </button>
 
 <button class="helpBtn6">Help
-    <span class="helpText">Please select the picture you want to upload and click on "Upload Picture"!</span>
+    <span class="helpText">Please select the picture you want to upload and click on "Upload Picture"!
+                           Pictures with a size up to 2048 bytes are possible to upload.</span>
 </button>
 <body>
 <header id="heading">
